26 0.02